<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registro" android:orientation="vertical"
        android:background="#2B2A2B"
        >
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:padding="20dp">

            <TextView
                    android:id="@+id/txt_contenido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_txt_registro"
                    android:textAlignment="center"
                    android:textColor="#7B7B7B"
                    android:textSize="24sp" />
            <ImageButton
                    android:layout_width="200dp"
                    android:layout_height="200dp" app:srcCompat="@drawable/avatar1"
                    android:id="@+id/foto_gallery"

                    android:scaleType="fitCenter" android:layout_gravity="center"/>

            <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/data_txt_correo"
                    android:textColor="#FFA300"
                    android:textSize="18sp" />

            <EditText
                    android:id="@+id/txt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/data_txt_correo"
                    android:inputType="textEmailAddress" />

            <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/data_txt_username"
                    android:textColor="#FFA300"
                    android:textSize="18sp" />

            <EditText
                    android:id="@+id/txt_NombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/data_txt_username"
                    android:inputType="textPersonName" />

            <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/data_txt_contra"
                    android:textColor="#FFA300"
                    android:textSize="18sp" />

            <EditText
                    android:id="@+id/txt_Contra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/data_txt_contra"
                    android:inputType="textPassword" />

            <Button
                    android:id="@+id/btn_aceptar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_btn_aceptar" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>